--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Oxanium:wght@200;300;400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    html, body {
+        @apply bg-black;
+    }
+
+    body > div {
+        @apply w-screen h-screen land:h-full land:pt-5;
+    }
+}
