Fix errors. Format code.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,57 +5,58 @@
 @tailwind utilities;
 
 @layer components {
-    html, body {
-        @apply bg-black;
-        @apply text-gray-200;
-        @apply typo-default;
-    }
+  html,
+  body {
+    @apply bg-black;
+    @apply text-gray-200;
+    @apply typo-default;
+  }
 
-    body > div {
-        @apply w-screen xl:max-w-screen-2xl xl:m-auto land:h-full pt-6 pb-6;
-    }
+  body > div {
+    @apply w-screen xl:max-w-screen-2xl xl:m-auto land:h-full pt-6 pb-6;
+  }
 
-    .main-gradient {
-        @apply bg-gradient-to-r from-[#CA3CCD] via-[#4CE6F0] to-[#0AFF95];
-    }
+  .main-gradient {
+    @apply bg-gradient-to-r from-[#CA3CCD] via-[#4CE6F0] to-[#0AFF95];
+  }
 
-    .typo-title {
-        @apply font-Orbitron font-bold;
-    }
+  .typo-title {
+    @apply font-Orbitron font-bold;
+  }
 
-    .typo-default {
-        @apply font-Oxanium;
-    }
+  .typo-default {
+    @apply font-Oxanium;
+  }
 
-    .text-gradient {
-        @apply main-gradient bg-clip-text text-transparent;
-    }
+  .text-gradient {
+    @apply main-gradient bg-clip-text text-transparent;
+  }
 
-    .beatport {
-        @apply text-beatport;
-    }
+  .beatport {
+    @apply text-beatport;
+  }
 
-    .facebook {
-        @apply text-facebook;
-    }
+  .facebook {
+    @apply text-facebook;
+  }
 
-    .instagram {
-        @apply text-instagram;
-    }
+  .instagram {
+    @apply text-instagram;
+  }
 
-    .mixcloud {
-        @apply text-mixcloud;
-    }
+  .mixcloud {
+    @apply text-mixcloud;
+  }
 
-    .soundcloud {
-        @apply text-soundcloud;
-    }
+  .soundcloud {
+    @apply text-soundcloud;
+  }
 
-    .twitter {
-        @apply text-twitter;
-    }
+  .twitter {
+    @apply text-twitter;
+  }
 
-    .youtube {
-        @apply text-youtube;
-    }
+  .youtube {
+    @apply text-youtube;
+  }
 }
